Add images and updates to styles

--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
 <body>
     <div class="main-container">
         <h1>🚀 Current Satellite Location:</h1>
+        <div class="student">
+            <p class="details"><strong>Student Name: Priyesh Gautam</strong></p>
+            <p class="details"><strong>Student ID: 200568939</strong></p>
+            <p class="details"><strong>Group ID: 4</strong></p>
+            <p class="details"><strong>Group Name: New Group 4</strong></p>
+        </div>
         <div id="lat_long"></div>
         <div id="map" class="map-area">
         </div>
+
     </div>
 </body>
 
